syntax = "proto3";
package lottery.lottery;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lottery/lottery/params.proto";
import "lottery/lottery/bet.proto";
import "lottery/lottery/lottery_record.proto";
// this line is used by starport scaffolding # 1

option go_package = "lottery/x/lottery/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lottery/lottery/params";
  }
  // Queries a Bet by index.
	rpc Bet(QueryGetBetRequest) returns (QueryGetBetResponse) {
		option (google.api.http).get = "/lottery/lottery/bet/{index}";
	}

	// Queries a list of Bet items.
	rpc BetAll(QueryAllBetRequest) returns (QueryAllBetResponse) {
		option (google.api.http).get = "/lottery/lottery/bet";
	}

// Queries a LotteryRecord by id.
	rpc LotteryRecord(QueryGetLotteryRecordRequest) returns (QueryGetLotteryRecordResponse) {
		option (google.api.http).get = "/lottery/lottery/lottery_record/{id}";
	}

	// Queries a list of LotteryRecord items.
	rpc LotteryRecordAll(QueryAllLotteryRecordRequest) returns (QueryAllLotteryRecordResponse) {
		option (google.api.http).get = "/lottery/lottery/lottery_record";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetBetRequest {
	  string index = 1;

}

message QueryGetBetResponse {
	Bet bet = 1 [(gogoproto.nullable) = false];
}

message QueryAllBetRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBetResponse {
	repeated Bet bet = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetLotteryRecordRequest {
	uint64 id = 1;
}

message QueryGetLotteryRecordResponse {
	LotteryRecord LotteryRecord = 1 [(gogoproto.nullable) = false];
}

message QueryAllLotteryRecordRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllLotteryRecordResponse {
	repeated LotteryRecord LotteryRecord = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
